--- a/Index.html
+++ b/Index.html
@@ -1,59 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Coursera assignment</title>
-<style>
-*{box-sizing: border-box;}
-
-h1{font-size:75%;}
-h2{font-size:25%;
-Float:right;
-height:10px;
-width:50px;
-border:1px solid black;}
-#h3{background-color:blue;}
-#h4{background-color:green;}
-#h5{background-color:red;}
-.row{width:100%}
-.column{
-  float: left;
-  width: 50%;
-  padding: 20px;
-background-color:gray;
-border:1px solid black;
-margin:5px;}
-
-@media screen and (min-width: 992px){.column{width:33.33%;}
-}
-
-
-@media screen and (max-width: 767px){.column{width:100%;}
-}
-@media screen and (max-width: 991px) and (min-width:768px){.column{width:50%;}
-}
-</style>
-</head>
-<body>
-
-<h1>My Responsive Design</h1>
-
-<div class="row">
-  <div class="column">
-    <h2 id="h3">DESIGN</h2>
-    <p>HELLO there. wo-hoo welcome to my responsive design on coursera.</p>
-  </div>
-  
-  <div class="column">
-    <h2 id="h4">LAYOUT</h2>
-    <p>YEAH I am really loving this course and am making my layout</p>
-  </div>
-  
-  <div class="column">
-    <h2 id="h5">MEDIA QUERY</h2>
-    <p>WHOA media query, I really don't get all of it. can you please help out.</p>
-  </div>
-</div>
-  </body>
-</html>
-
+<html><body><p>Hello World</p></body></html>
